fixed letter-spacing classes

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -132,11 +132,11 @@ select {
   letter-spacing: 4.75px;
 }
 
-.letter-spacing-1 {
+.letter-spacing-2 {
   letter-spacing: 2.7px;
 }
 
-.letter-spacing-1 {
+.letter-spacing-3 {
   letter-spacing: 2.35px;
 }
 
